--- a/about.html
+++ b/about.html
@@ -11,36 +11,37 @@
 
 <body class = "js">
   <header id = "header">
-      <a href ='#home' class ="header-logo">
-        <div class ="main-logo">Leslie Cooper, Ph.D., ABPP</div>
-        <div class ="sub-logo">Clinical Psychologist</div>
-      </a>
-<div class="button_container" id="hamburger">
-  <span class="top"></span>
-  <span class="middle"></span>
-  <span class="bottom"></span>
-</div>
-<div class="overlay" id="overlay">
-  <nav class="overlay-menu">
-    <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#therapy">Therapy</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-</div>
-</header>
-<section id = "home">
+    <a href ='#home' class ="header-logo">
+      <div class ="main-logo">Leslie Cooper, Ph.D., ABPP</div>
+      <div class ="sub-logo">Clinical Psychologist</div>
+    </a>
+    <div class="button_container" id="hamburger">
+      <span class="top"></span>
+      <span class="middle"></span>
+      <span class="bottom"></span>
+    </div>
+    <div class="overlay" id="overlay">
+      <nav class="overlay-menu">
+        <ul>
+          <li class = "menu-item"><a href="#home">Home</a></li>
+          <li class = "menu-item"><a href="#about">About</a></li>
+          <li class = "menu-item"><a href="#therapy">Therapy</a></li>
+          <li class = "menu-item"><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
+  <section id = "home">
     <h1 class = "hero-header">17 years of experience <span>listening</span> to and <span>honoring</span> people&#39;s stories</h1>
     <a href = "#about" class = "button">Meet Dr. Cooper</a>
   </section>
-<main>
+
+  <main>
     <section id = "about">
       <div class = "header-wrapper">
-      <h1 class = "section-header">Meet Dr. Leslie Cooper</h1>
-    </div>
+        <h1 class = "section-header">Meet Dr. Leslie Cooper</h1>
+      </div>
       <section id = "about-grid">
         <img src = "images/headshot.jpg" id = "headshot" alt="Dr. Leslie Cooper">
         <div id = "about-content">
@@ -80,16 +81,15 @@
         </div>
       </div>
     </div>
-      </section>
-    </section>
-      <section id = "therapy">
-              <div class = "header-wrapper">
-        <h1 class = "section-header">Therapy</h1>
-      </div>
-        <section id = "therapy-grid">
-        <p id = "therapy-intro">I do not believe that <em>one size fits all</em>. Therapy is a collaborative relationship built on trust. Whether the treatment is cognitive behavioral therapy, acceptance and commitment therapy, psychodynamic psychotherapy, supportive therapy, or other forms of intervention, the most important therapy is the one that allows a person to grow and find the life most meaningful to him or her.</p>
-        <!-- <div id = "therapy-content"> -->
+  </section>
+</section>
 
+  <section id = "therapy">
+    <div class = "header-wrapper">
+      <h1 class = "section-header">Therapy</h1>
+    </div>
+    <section id = "therapy-grid">
+      <p id = "therapy-intro">I do not believe that <em>one size fits all</em>. Therapy is a collaborative relationship built on trust. Whether the treatment is cognitive behavioral therapy, acceptance and commitment therapy, psychodynamic psychotherapy, supportive therapy, or other forms of intervention, the most important therapy is the one that allows a person to grow and find the life most meaningful to him or her.</p>
         <div  id = "therapy-services">
           <h2>Services</h2>
           <div class = "content">
@@ -101,88 +101,78 @@
           </div>
         </div>
 
-           <div id = "therapy-specialties">
-             <h2>Specialties</h2>
-             <div class = "content">
-              <ul class = "content-list">
-                <li>Depression and Anxiety</li>
-                <li>Trauma, PTSD, Complex<br> Trauma</li>
-                <li>Cancer and Chronic Illness</li>
-                <li>Grief and Loss</li>
-                <li>End-of-Life Challenges</li>
-                <li>Women&#39;s Issues</li>
-                <li>Relationship Issues</li>
-                <li>Military</li>
-                <li>Life Transitions</li>
-                <li>LGBTQ</li>
-              </ul>
-            </div>
+        <div id = "therapy-specialties">
+          <h2>Specialties</h2>
+          <div class = "content">
+            <ul class = "content-list">
+              <li>Depression and Anxiety</li>
+              <li>Trauma, PTSD, Complex<br> Trauma</li>
+              <li>Cancer and Chronic Illness</li>
+              <li>Grief and Loss</li>
+              <li>End-of-Life Challenges</li>
+              <li>Women&#39;s Issues</li>
+              <li>Relationship Issues</li>
+              <li>Military</li>
+              <li>Life Transitions</li>
+              <li>LGBTQ</li>
+            </ul>
           </div>
+        </div>
 
         <div id = "therapy-finances">
           <h2>Finances</h2>
           <div class = "content" >
-          <p>Although I am an out-of-network provider, many insurance plans provide out-of-network benefits</p>
-          <ul class = "content-list">
-            <li>Average Cost: $180-200</li>
-            <li>Sliding Scale: Yes</li>
-            <li>Accepted Payments: Cash, Check</li>
-          </ul>
+            <p>Although I am an out-of-network provider, many insurance plans provide out-of-network benefits</p>
+            <ul class = "content-list">
+              <li>Average Cost: $180-200</li>
+              <li>Sliding Scale: Yes</li>
+              <li>Accepted Payments: Cash, Check</li>
+            </ul>
+          </div>
         </div>
-        </div>
-      </div>
-
-    </div>
       </section>
     </section>
 
     <section id = "contact">
-            <div class = "header-wrapper">
-      <h1 class = "section-header">Contact</h1>
-    </div>
-    <section id = "contact-grid">
-      <div id = "contact-content">
-        <h2>Appointments & Location</h2>
-        <div class = "content">
-          <p>My office is conveniently located 1.5 blocks south of the Friendship Heights Metro station. There is free two-hour street parking.</p>
-          <p>An appointment with me can be arranged by phone, e-mail or text. </p>
-          <p>I look forward to meeting with you and building that relationship.</p>
-        </div>
+      <div class = "header-wrapper">
+        <h1 class = "section-header">Contact</h1>
       </div>
-      <div id="map"></div>
-      <div class = "contact-info">
-
+      <section id = "contact-grid">
+        <div id = "contact-content">
+          <h2>Appointments & Location</h2>
+          <div class = "content">
+            <p>My office is conveniently located 1.5 blocks south of the Friendship Heights Metro station. There is free two-hour street parking.</p>
+            <p>An appointment with me can be arranged by phone, e-mail or text. </p>
+            <p>I look forward to meeting with you and building that relationship.</p>
+          </div>
+        </div>
+        <div id="map"></div>
+        <div class = "contact-info">
+          <div class ="address">
+            <img src = "icons/pin.png" class = "icon" id = "pin-icon">
+            <h3>Address:</h3>
+            <address> 5100 Wisconsin Avenue, NW
+                      <br>
+                      Suite 300
+                      <br>
+                      Washington, DC 20016
+            </address>
+          </div>
           <div class ="email">
-            <img src = "icons/mail.png" class = "icon" id ="mail">
-            <div>
+            <img src = "icons/mail.png" class = "icon" id ="mail-icon">
             <h3>Email:</h3>
-          <a href="mailto:lesliecooper23@gmail.com">lesliecooper23@gmail.com</a>
-        </div class = "telephone">
-      </div>
-
-          <div>
-            <img src = "icons/phone.png" class = "icon" id = "phone">
-            <div>
+            <a href="mailto:lesliecooper23@gmail.com">lesliecooper23@gmail.com</a>
+          </div>
+          <div class = "telephone">
+            <img src = "icons/phone.png" class = "icon" id = "phone-icon">
             <h3>Phone:</h3>
-          <a href="tel:555-555-5555">555-555-5555</a>
+            <a href="tel:301-452-7327">(301) 452-7327</a>
+          </div>
         </div>
-        </div>
-
-        <div class ="address">
-          <img src = "icons/pin.png" class = "icon" id = "pin">
-          <div>
-          <h3>Address:</h3>
-        <address> 5100 Wisconsin Avenue, NW
-                  <br>
-                  Suite 300
-                  <br>
-                  Washington, DC 20016
-        </address>
-      </div>
-      </div>
+      </section>
     </section>
-  </section>
   </main>
+
   <footer>
     <p class = "copyright"> &copy; Leslie Cooper, 2018</p>
   </footer>
